# x12

./: ARCHITECTURE.md  BENCHMARKS.md  Cargo.toml  DESIGN.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SUMMARY.md
host/: Cargo.toml  README.md
host/examples/: complete_workflow.rs
host/src/: lib.rs  main.rs
host/test_data/: invalid_837.x12  sample_837.x12
parser/: Cargo.toml
parser/src/: lib.rs
parser/tests/: edge_cases.rs  invalid.rs  newline_handling.rs  valid.rs
parser/tests/common/: mod.rs  segment_collector.rs
segment/: Cargo.toml
segment/examples/: parse_837.rs  streaming_validation.rs
segment/src/: isa.rs  lib.rs  qualifier.rs
segment/tests/: integration_tests.rs
validation/: Cargo.toml
validation/src/: lib.rs
